--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
         <div class="container">
             <h1>The "Bullets and Goodbyes" Project</h1>
-            <p class="subtitle">An Ivy League-Level Deconstruction of a Modern Outlaw Anthem</p>
+            <p class="subtitle">An Expert-Level Deconstruction of a Modern Outlaw Anthem</p>
         </div>
     </header>
 
