--- a/Anatomy_of_an_Anthem_Infographic.html
+++ b/Anatomy_of_an_Anthem_Infographic.html
@@ -71,7 +71,7 @@
             </div>
             <div class="kpi-card bg-gray-800 p-6 rounded-lg shadow-xl">
                 <p class="kpi-label text-sm uppercase text-gray-400">Genre</p>
-                <p class="kpi-value text-xl md:text-2xl font-bold text-white">Funk Rock</p>
+                <p class="kpi-value text-xl md:text-2xl font-bold text-white">Outlaw Rock Country</p>
             </div>
         </section>
 
