--- a/Anatomy_of_an_Anthem_Infographic.html
+++ b/Anatomy_of_an_Anthem_Infographic.html
@@ -74,7 +74,7 @@
             </div>
             <div class="kpi-card bg-gray-800 p-6 rounded-lg shadow-xl">
                 <p class="kpi-label text-sm uppercase text-gray-400">Genre</p>
-                <p class="kpi-value text-xl md:text-2xl font-bold text-white">Funk Rock</p>
+                <p class="kpi-value text-xl md:text-2xl font-bold text-white">Outlaw Rock</p>
             </div>
         </section>
 
@@ -132,7 +132,7 @@
 
         <section id="market-positioning" class="bg-gray-800 p-6 md:p-8 rounded-lg shadow-xl mt-12">
             <h3 class="market-title text-2xl font-bold text-amber mb-4 text-center">Commercial Viability & Market Impact</h3>
-            <p class="market-p text-center max-w-3xl mx-auto mb-8 text-gray-300">"Bullets and Goodbyes" is perfectly positioned to serve a core market of Funk Rock fans, with high potential for synchronization in film, television, and advertising.</p>
+            <p class="market-p text-center max-w-3xl mx-auto mb-8 text-gray-300">"Bullets and Goodbyes" is perfectly positioned to serve a core market of Outlaw Rock fans, with high potential for synchronization in film, television, and advertising.</p>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                 <div>
                     <h4 class="audience-title font-bold text-white text-lg mb-2 text-center">Target Audience Demographics</h4>
