Added new PDF reader
Added new PDF reader

--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
         <section id="analysis" class="card">
             <h2>Core Analysis</h2>
             <p>Explore the definitive documents that break down every facet of the song, from its market potential to its lyrical genius.</p>
-            <div class="document-links">
-                <a href="assets/Definitive_Song_Analysis.pdf" class="btn" target="_blank">View Definitive Analysis (PDF)</a>
-                <a href="Anatomy_of_an_Anthem_Infographic.html" class="btn" target="_blank">Launch Interactive Infographic</a>
-            </div>
+          
+<div class="document-links">
+    <a href="pdf-reader.html" class="btn">View Definitive Analysis</a>
+    
+    <a href="Anatomy_of_an_Anthem_Infographic.html" class="btn" target="_blank">Launch Interactive Infographic</a>
+</div>
+
+
+
         </section>
 
         <!-- Learning Hub Section -->
