Fresh colors - new link to flash cards

--- a/flashcards.html
+++ b/flashcards.html
@@ -36,11 +36,11 @@
         </div>
 
         <div class="flex items-center justify-between w-full max-w-xs mx-auto">
-            <button id="prev-btn" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-6 rounded-lg transition-colors">
+            <button id="prev-btn" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-lg transition-colors">
                 Previous
             </button>
             <div id="card-counter" class="text-lg font-semibold text-gray-700"></div>
-            <button id="next-btn" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-6 rounded-lg transition-colors">
+            <button id="next-btn" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded-lg transition-colors">
                 Next
             </button>
         </div>
