--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The "Bullets and Goodbyes" Project</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet"
 </head>
-<body>
 
+<body>
     <header class="main-header">
         <div class="container">
             <h1>The "Bullets and Goodbyes" Project</h1>
@@ -75,7 +75,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            <p>&copy; 2025 The "Bullets and Goodbyes" Project. A collaboration with Song Analysis Gem.</p>
+            <p>&copy; 2025 The "Bullets and Goodbyes" Project. A collaboration with Happy Machines and Humans, LLC.</p>
         </div>
     </footer>
 
